src/objects/CoreLogic__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AvmEndpoint__c</fullName>
        <label>AvmEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchApiEndPoint__c</fullName>
        <label>SearchApiEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenEndPoint__c</fullName>
        <label>TokenEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CoreLogic</label>
</CustomObject>